--- a/album/templates/album/web/album_display.html
+++ b/album/templates/album/web/album_display.html
@@ -902,6 +902,8 @@ var aVue = new Vue({
 });
 </script>
 <script>
+    {% if has_key %}
+    {% endif %}
     $("#sec_content,#biyeji_container").css("marginTop",-$(window).height());
 </script>
 </body>
