--- a/album/templates/album/web/components/picture_edit.html
+++ b/album/templates/album/web/components/picture_edit.html
@@ -35,7 +35,7 @@
 
 {% verbatim %}
 <v-touch id="pictureEdit" v-on:panright="hide($event)" v-cloak>
-    <p class="weui-cells__title">照片上传(拖动照片更换顺序)</p>
+    <p class="weui-cells__title">照片上传(最多8张，拖动照片更换顺序)</p>
     <div class="weui-cells weui-cells_form" id="uploaderCustom">
         <div class="weui-cell">
             <div class="weui-cell__bd">
