--- a/album/templates/album/web/album_display.html
+++ b/album/templates/album/web/album_display.html
@@ -541,6 +541,18 @@
         background-color: rgba(255, 128, 0, 0.4);
 
     }
+    #vueMask .private-hint {
+        top: 2px;
+        z-index: 201;
+        position: absolute;
+        color: #ff0000;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 5px;
+        background-color: rgba(255, 255, 255, 1);
+        white-space: nowrap;
+        padding: 0 8px;
+    }
     #album{
         display: none;
     }
@@ -569,6 +581,9 @@
             <v-touch class="edit-album edit-album-info" v-on:tap="editAlbumInfo">保存</v-touch>
         </div>
     </div>
+    {% endif %}
+    {% if has_key %}
+        <div class="private-hint">这是你的私人页面, 请勿分享，<a href="{{ share_url }}">点此进入公开页面</a></div>
     {% endif %}
 </div>
 
@@ -902,8 +917,6 @@ var aVue = new Vue({
 });
 </script>
 <script>
-    {% if has_key %}
-    {% endif %}
     $("#sec_content,#biyeji_container").css("marginTop",-$(window).height());
 </script>
 </body>
