--- a/album/templates/album/cms/components/album_detail.html
+++ b/album/templates/album/cms/components/album_detail.html
@@ -47,10 +47,10 @@
                     <div class="weui-uploader__hd d-none"><p class="weui-uploader__title">照片上传</p></div>
                     <div class="weui-uploader__bd">
                         <ul class="weui-uploader__files" id="uploaderCustomFiles">
-                            <v-touch tag="li" class="weui-uploader__file"
+                            <v-touch tag="li" class="weui-uploader__file pg-no-us"
                                 :data-seq="picture.seq"
                                 v-on:tap.prevent="displayPicture(picture)"
-                                v-on:press.prevent="displayPicture(picture)"
+                                v-on:press.prevent="deletePicture(picture)"
                                 v-for="picture in album.picture_list">
                                 <div class="el w-100 h-100" :style="'background-image: url(' + picture.image + ');'" :data-id="picture.id"></div>
                             </v-touch>
@@ -82,6 +82,10 @@
             </div>
         </v-touch>
     </div>
+
+    <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
+        <div class="ab-btn-del"></div>
+    </v-touch>
     {% endverbatim %}
 </v-touch>
 
