--- a/album/templates/album/web/components/info_edit.html
+++ b/album/templates/album/web/components/info_edit.html
@@ -44,6 +44,9 @@
     <div class="weui-btn-area">
         <v-touch tag="span" class="weui-btn weui-btn_primary" v-on:tap.prevent="submit">确定</v-touch>
     </div>
+    <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
+        <div class="ab-btn-del"></div>
+    </v-touch>
 </v-touch>
 {% endverbatim %}
 
