--- a/album/templates/album/web/components/music_select.html
+++ b/album/templates/album/web/components/music_select.html
@@ -63,6 +63,10 @@
                      v-on:tap.prevent="playMusic(i, music)"></v-touch>
         </span>
     </div>
+
+    <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
+        <div class="ab-btn-del"></div>
+    </v-touch>
 </v-touch>
 {% endverbatim %}
 
