--- a/album/templates/album/web/components/template_select.html
+++ b/album/templates/album/web/components/template_select.html
@@ -71,6 +71,9 @@
             </div>
         </v-touch>
     </div>
+    <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
+        <div class="ab-btn-del"></div>
+    </v-touch>
 </v-touch>
 {% endverbatim %}
 
