--- a/album/templates/album/web/album_list.html
+++ b/album/templates/album/web/album_list.html
@@ -51,9 +51,9 @@
     <div id="albumList" v-cloak>
         <p class="weui-cells__title"><span class="text-secondary">长按编辑相册</span><span class="text-danger">（这是你的私人页面, 请勿分享）</span> <a class="float-right text-info" :href="createAlbumUrl">创建相册</a></p>
         <div class="album-list row mx-0">
-            <v-touch class="album-item col-4 pr-0"
-                     v-on:press="actionAlbum(album)"
-                     v-on:tap="editAlbum(album)"
+            <v-touch class="album-item col-4 pr-0 pg-no-us"
+                     v-on:press.prevent="actionAlbum(album)"
+                     v-on:tap.prevent="editAlbum(album)"
                      :key="album.id"
                      v-for="album, i in albums">
                 <div class="border p-1 position-relative">
@@ -84,7 +84,7 @@
 var alVue = new Vue({
     el: '#albumList',
     data: {
-        createAlbumUrl: context.albumDisplayPageUrl + window.location.search + '&edit=1',
+        createAlbumUrl: context.albumDisplayPageUrl + '?edit=1',
         albums: [],
     },
     methods: {
@@ -92,6 +92,9 @@ var alVue = new Vue({
             var vue = this;
             http.get(context.albumListApiUrl, {}, function(res){
                 vue.albums = res;
+                Vue.nextTick(function () {
+                    $(this.$el).find('.album-item').banContextmenu();
+                });
             });
         },
         albumCover: function (album) {
@@ -104,7 +107,7 @@ var alVue = new Vue({
             }
         },
         editAlbum: function (album) {
-            window.location.href = context.albumDisplayPageUrl.replace('0', album.id) + window.location.search;
+            window.location.href = context.albumDisplayPageUrl.replace('0', album.id);
         },
         actionAlbum: function (album) {
             var vue = this;
