--- a/album/templates/album/web/base.html
+++ b/album/templates/album/web/base.html
@@ -11,6 +11,7 @@
     {% else %}
         <link rel="stylesheet" href="{% static 'we/common/lib/weui/css/weui.css' %}">
     {% endif %}
+    <link rel="stylesheet" href="{% static 'album/common/css/common.css' %}">
 {% endblock %}
 
 
