--- a/album/templates/album/cms/components/album_detail.html
+++ b/album/templates/album/cms/components/album_detail.html
@@ -47,7 +47,7 @@
                     <div class="weui-uploader__hd d-none"><p class="weui-uploader__title">照片上传</p></div>
                     <div class="weui-uploader__bd">
                         <ul class="weui-uploader__files" id="uploaderCustomFiles">
-                            <v-touch tag="li" class="weui-uploader__file pg-no-us"
+                            <v-touch tag="li" class="weui-uploader__file"
                                 :data-seq="picture.seq"
                                 v-on:tap.prevent="displayPicture(picture)"
                                 v-on:press.prevent="deletePicture(picture)"
