--- a/album/templates/album/web/crawl.html
+++ b/album/templates/album/web/crawl.html
@@ -28,6 +28,7 @@
     {{ block.super }}
 {% endblock %}
 {% block local_js %}
+    {{ block.super }}
 <script type="text/javascript">
     $('#crawl').click(function () {
         var url = $('#url').val();
