--- a/album/templates/album/web/components/album_edit.html
+++ b/album/templates/album/web/components/album_edit.html
@@ -13,6 +13,7 @@
         width: 100%;
         height: 100%;
         background-color: #f8f8f8;
+        overflow: auto;
         display: none;
     }
     #albumExtra:before{
@@ -68,7 +69,7 @@
                 <span class="weui-cell__ft"></span>
             </v-touch>
         </div>
-        <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
+        <v-touch class="pg-center-x ab-bottom-btn position-fixed" v-on:tap.prevent="hide">
             <div class="ab-btn-del"></div>
         </v-touch>
     </v-touch>
@@ -166,7 +167,6 @@
                     this.state = JSON.stringify(this.album);
                     docUtil.setTitle('编辑相册');
                     $('#albumEdit').animateCss('slideInRight').show();
-                    this.fixAlbumExtraHeight();
                 },
                 hide: function (e) {
                 	if (!context.canHideEditor) {
@@ -194,10 +194,6 @@
                 },
                 enterEditInfo: function () {
                     iVue.show();
-                },
-                fixAlbumExtraHeight: function () {
-                    var height = document.documentElement.clientHeight - $('#albumEdit').find('#pictureEdit').outerHeight();
-                    $(this.$el).height(height);
                 },
             },
         });
