--- a/album/templates/album/cms/album_manage.html
+++ b/album/templates/album/cms/album_manage.html
@@ -41,7 +41,11 @@
         }
         #albumList .album-name{
             font-size: 14px;
-
+        }
+        #albumList .no-record{
+            font-size: 16px;
+            line-height: 80px;
+            width: 100%;
         }
     </style>
 {% endblock %}
@@ -66,6 +70,9 @@
                     <div class="pg-mask"></div>
                 </div>
             </v-touch>
+            <div class="no-record text-secondary text-center" v-if="albums.length == 0">
+                还没有相册
+            </div>
         </div>
     </div>
     {% endverbatim %}
