--- a/base/templates/base/cms/base.html
+++ b/base/templates/base/cms/base.html
@@ -16,6 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
+    {% block favicon %}
+    {% endblock %}
+
     {% block top_css %}
         {% if UC %}
             <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css">
