--- a/base/templates/base/cms/base.html
+++ b/base/templates/base/cms/base.html
@@ -6,7 +6,7 @@
 <html>
 <head>
     {% get_current_language as LANGUAGE_CODE %}
-    {% use_cdn as UC %}
+    {% get_settings as settings %}
     <meta charset="utf-8">
     <title>{% block title %}PG{% endblock %}</title>
 
@@ -20,7 +20,7 @@
     {% endblock %}
 
     {% block top_css %}
-        {% if UC %}
+        {% if settings.USE_CDN %}
             <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
         {% else %}
@@ -30,7 +30,7 @@
 
         <link rel="stylesheet" href="{% static_v 'base/common/css/common.css' %}">
     {% endblock %}
-    {% if UC %}
+    {% if settings.USE_CDN %}
         <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     {% else %}
         <script src="{% static 'base/common/lib/jquery/jquery-3.3.1.js' %}"></script>
@@ -56,7 +56,7 @@
     {% endblock %}
 </div>
 {% block bottom_js %}
-    {% if UC %}
+    {% if settings.USE_CDN %}
         <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
